Cleanup ProcessTool.createJavaProcessBuilder()