@@ -338,25 +338,10 @@ public final class ProcessTools {
                     if (cmd.equals(dWArg)) {
                         skipNext = true;
                         args.add(cmd);
-                        continue;
+                        break;
                     }
                 }
                 if (skipNext) {
-                    continue;
-                }
-                if (cmd.startsWith("-cp")) {
-                    skipNext = true;
-                    args.add(cmd);
-                    continue;
-                }
-                if (cmd.startsWith("--add-exports")) {
-                    skipNext = true;
-                    args.add(cmd);
-                    continue;
-                }
-                if (cmd.startsWith("--patch-module")) {
-                    skipNext = true;
-                    args.add(cmd);
                     continue;
                 }
                 if (cmd.startsWith("-")) {
